--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <header id="header">  
 <h1 id="game-name"> Memory Card</h1>
 </header> 
+<div class="modal"></div>
 <div class="main"></div>
+
+
+
 <script src="main.js"> </script>  
 
 </body>
