displaying the images for 6 seconds in the beggining of the game

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
 <header id="header">  
 <h1 id="game-name"> Memory Card</h1>
+<p id="how-to-play"> Refresh your memory with the image card. 
+    12 images will appear for 6 seconds, you have 2 identical images. 
+    Then the images wil flip 
+    You have to remember and click on the identical images. 
+    ENJOY &#128512; 
+    
+
+</p>
 </header> 
 <div class="modal"></div>
 <div class="main"></div>
