How to play paragraph

--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
 
 </head>
 <body>
-<header id="header">  
-<h1 id="game-name"> Memory Card</h1>
-<p id="how-to-play"> Refresh your memory with the image card. 
-    12 images will appear for 6 seconds, you have 2 identical images. 
-    Then the images wil flip 
-    You have to remember and click on the identical images. 
-    ENJOY &#128512; 
+<div id="header">  
+<h1 id="game-name">Memory Card</h1>
+<div class=" how-to-play">
+<p > Refresh your memory with the image cards: <br><br>
+
+    *12 images are displayed for 6 seconds, Each pair of images has an identical match.  <br>
+
+    *Then the images will flip <br> 
     
+    *The player's task is to remember the locations of the identical pairs. <br>
+
+    *If the player makes three incorrect iterations (clicks on non-matching pairs), they lose the game.<br><br>
+    
+    ENJOY &#128512; 
+
 
 </p>
-</header> 
+</div>
+</div> 
 <div class="modal"></div>
 <div class="main"></div>
 
