--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 </div>
 </div> 
 <div class="modal"></div>
-<div class="main"></div>
 
+<div class="main"></div>
+<div id="try-again"><button> Try Again </button></div>
 
 
 <script src="main.js"> </script>  
