shuffle images-complete

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <div class="modal"></div>
 
 <div class="main"></div>
-<div id="try-again"><button> Try Again </button></div>
-
+<div id="lose-win-text"></div>
+<div id="try-again"><button id="try-again-button"> Try Again </button></div>
 
 <script src="main.js"> </script>  
 
