editing the style

--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
 
     *If the player makes three incorrect iterations (clicks on non-matching pairs), they lose the game.<br><br>
     
+    Click Start to begin <br> <br>
     ENJOY &#128512; 
 
 
 </p>
+<button id="start">Start</button>
 </div>
 </div> 
 <div class="modal"></div>
 
 <div class="main"></div>
+
 <div id="lose-win-text"></div>
 <div id="try-again"><button id="try-again-button"> Try Again </button></div>
+
 
 <script src="main.js"> </script>  
 
